--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  background-color: #393E46;
+  background-color: #000000;
 }
 
 h1 {
@@ -19,12 +19,12 @@ h1 {
   font-family: 'Lobster', cursive;
   text-shadow: 5px 0 #232931;
   font-size: 8rem;
-  color: #4ECCA3;
+  color: #5b4ecc;
 }
 
 p {
   font-size: 2rem;
-  color: #4ECCA3;
+  color: #824ecc;
   font-family: 'Indie Flower', cursive;
 }
 
